syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "StringMetricStateProto";

import "sdc/biceps/abstractmetricstate.proto";
import "sdc/biceps/stringmetricvalue.proto";

message StringMetricStateMsg {
  AbstractMetricStateMsg abstract_metric_state = 1;
  StringMetricValueMsg metric_value = 2;
}
